--- a/index.html
+++ b/index.html
@@ -103,40 +103,59 @@
         </div>
       </article>
       <article class="article-2">
-        <h2>State of the Art Infrastructure</h2>
-        <p>
-          With reliability and speed in mind, worldwide data centers provide the
-          backbone for ultra-fast connectivity. This ensures your site will load
-          instantly, no matter where your readers are, keeping your site
-          competitive.
-        </p>
-      </article>
-      <article class="article-3">
-        <div class="part-1">
-          <h3>Free, open, simple</h3>
+        <div class="img-phones">
+          <img src="images/illustration-phones.svg" alt="phones image" />
+        </div>
+        <div class="text">
+          <h2>State of the Art Infrastructure</h2>
           <p>
-            Blogr is a free and open source application backed by a large
-            community of helpful developers. It supports features such as code
-            syntax highlighting, RSS feeds, social media integration,
-            third-party commenting tools, and works seamlessly with Google
-            Analytics. The architecture is clean and is relatively easy to
-            learn.
+            With reliability and speed in mind, worldwide data centers provide
+            the backbone for ultra-fast connectivity. This ensures your site
+            will load instantly, no matter where your readers are, keeping your
+            site competitive.
           </p>
         </div>
-        <div class="part-2">
-          <h3>Powerful tooling</h3>
-          <p>
-            Batteries included. We built a simple and straightforward CLI tool
-            that makes customization and deployment a breeze, but capable of
-            producing even the most complicated sites.
-          </p>
+      </article>
+      <article class="article-3">
+        <div class="img-laptop">
+          <img
+            src="images/illustration-laptop-desktop.svg"
+            alt="laptop image"
+          />
+        </div>
+        <div class="text">
+          <div class="part-1">
+            <h3>Free, open, simple</h3>
+            <p>
+              Blogr is a free and open source application backed by a large
+              community of helpful developers. It supports features such as code
+              syntax highlighting, RSS feeds, social media integration,
+              third-party commenting tools, and works seamlessly with Google
+              Analytics. The architecture is clean and is relatively easy to
+              learn.
+            </p>
+          </div>
+          <div class="part-2">
+            <h3>Powerful tooling</h3>
+            <p>
+              Batteries included. We built a simple and straightforward CLI tool
+              that makes customization and deployment a breeze, but capable of
+              producing even the most complicated sites.
+            </p>
+          </div>
         </div>
       </article>
     </main>
     <footer>
+      <div class="logo">
+        <img src="images/logo.svg" alt="logo" />
+      </div>
       <div class="footer-menu">
-        Product Overview Pricing Marketplace Features Integrations Company About
-        Team Blog Careers Connect Contact Newsletter LinkedIn
+        <div class="footer-menu-1">
+          Product Overview Pricing Marketplace Features Integrations
+        </div>
+        <div class="footer-menu-2">Company About Team Blog Careers</div>
+        <div class="footer-menu-3">Connect Contact Newsletter LinkedIn</div>
       </div>
       <div class="attribution">
         Challenge by
