worked on mobile design

--- a/index.html
+++ b/index.html
@@ -22,43 +22,48 @@
         <div class="logo">
           <img src="images/logo.svg" alt="logo" />
         </div>
-        <div class="dropdown">
-          <p class="dropbtn">
-            Product
-            <img src="images/icon-arrow-light.svg" alt="arrow" />
-          </p>
-          <div class="dropdown-content">
-            <a href="#">Overview</a>
-            <a href="#">Pricing</a>
-            <a href="#">Marketplace</a>
-            <a href="#">Features</a>
-            <a href="#">Integrations</a>
+        <div class="nav-menu">
+          <div class="dropdown">
+            <p class="dropbtn">
+              Product
+              <img src="images/icon-arrow-light.svg" alt="arrow" />
+            </p>
+            <div class="dropdown-content">
+              <a href="#">Overview</a>
+              <a href="#">Pricing</a>
+              <a href="#">Marketplace</a>
+              <a href="#">Features</a>
+              <a href="#">Integrations</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <p class="dropbtn">
+              Company <img src="images/icon-arrow-light.svg" alt="arrow" />
+            </p>
+            <div class="dropdown-content">
+              <a href="#">About</a>
+              <a href="#">Team</a>
+              <a href="#">Blog</a>
+              <a href="#">Careers</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <p class="dropbtn">
+              Connect <img src="images/icon-arrow-light.svg" alt="arrow" />
+            </p>
+            <div class="dropdown-content">
+              <a href="#">Contact</a>
+              <a href="#">Newsletter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+          <div class="user-menu">
+            <p class="dropbtn login">Login</p>
+            <button class="btn btn-white signup">Sign Up</button>
           </div>
         </div>
-        <div class="dropdown">
-          <p class="dropbtn">
-            Company <img src="images/icon-arrow-light.svg" alt="arrow" />
-          </p>
-          <div class="dropdown-content">
-            <a href="#">About</a>
-            <a href="#">Team</a>
-            <a href="#">Blog</a>
-            <a href="#">Careers</a>
-          </div>
-        </div>
-        <div class="dropdown">
-          <p class="dropbtn">
-            Connect <img src="images/icon-arrow-light.svg" alt="arrow" />
-          </p>
-          <div class="dropdown-content">
-            <a href="#">Contact</a>
-            <a href="#">Newsletter</a>
-            <a href="#">LinkedIn</a>
-          </div>
-        </div>
-        <div class="user-menu">
-          <p class="dropbtn login">Login</p>
-          <button class="btn btn-white signup">Sign Up</button>
+        <div class="menu-button">
+          <img src="images/icon-hamburger.svg" alt="menu button" />
         </div>
       </nav>
       <div class="introduction">
@@ -72,6 +77,18 @@
       <article class="article-1">
         <h2>Designed for the future</h2>
         <div class="article-body">
+          <div class="img-editor-desktop">
+            <img
+              src="images/illustration-editor-desktop.svg"
+              alt="editor image"
+            />
+          </div>
+          <div class="img-editor-mobile">
+            <img
+              src="images/illustration-editor-mobile.svg"
+              alt="editor image mobile"
+            />
+          </div>
           <div class="text">
             <div class="part-1">
               <h3>Introducing an extensible editor</h3>
@@ -93,12 +110,6 @@
                 you’re in full control.
               </p>
             </div>
-          </div>
-          <div class="img-editor">
-            <img
-              src="images/illustration-editor-desktop.svg"
-              alt="editor image"
-            />
           </div>
         </div>
       </article>
@@ -147,15 +158,31 @@
       </article>
     </main>
     <footer>
-      <div class="logo">
-        <img src="images/logo.svg" alt="logo" />
-      </div>
       <div class="footer-menu">
-        <div class="footer-menu-1">
-          Product Overview Pricing Marketplace Features Integrations
+        <div class="logo">
+          <img src="images/logo.svg" alt="logo" />
         </div>
-        <div class="footer-menu-2">Company About Team Blog Careers</div>
-        <div class="footer-menu-3">Connect Contact Newsletter LinkedIn</div>
+        <div class="footer-menu-1">
+          <a href="#" class="first">Product</a>
+          <a href="#">Overview</a>
+          <a href="#">Pricing</a>
+          <a href="#">Marketplace</a>
+          <a href="#">Features</a>
+          <a href="#">Integrations</a>
+        </div>
+        <div class="footer-menu-2">
+          <a href="#" class="first">Company</a>
+          <a href="#">About</a>
+          <a href="#">Team</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+        </div>
+        <div class="footer-menu-3">
+          <a href="#" class="first">Connect</a>
+          <a href="#">Contact</a>
+          <a href="#">Newsletter</a>
+          <a href="#">LinkedIn</a>
+        </div>
       </div>
       <div class="attribution">
         Challenge by
