worked on mobile design

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
           </div>
         </div>
         <div class="menu-button">
-          <img src="images/icon-hamburger.svg" alt="menu button" />
+          <img
+            class="menu-btn"
+            src="images/icon-hamburger.svg"
+            alt="menu button"
+          />
         </div>
       </nav>
       <div class="introduction">
@@ -128,31 +132,39 @@
         </div>
       </article>
       <article class="article-3">
-        <div class="img-laptop">
-          <img
-            src="images/illustration-laptop-desktop.svg"
-            alt="laptop image"
-          />
-        </div>
-        <div class="text">
-          <div class="part-1">
-            <h3>Free, open, simple</h3>
-            <p>
-              Blogr is a free and open source application backed by a large
-              community of helpful developers. It supports features such as code
-              syntax highlighting, RSS feeds, social media integration,
-              third-party commenting tools, and works seamlessly with Google
-              Analytics. The architecture is clean and is relatively easy to
-              learn.
-            </p>
+        <div class="article-body">
+          <div class="img-laptop-desktop">
+            <img
+              src="images/illustration-laptop-desktop.svg"
+              alt="laptop image desktop"
+            />
           </div>
-          <div class="part-2">
-            <h3>Powerful tooling</h3>
-            <p>
-              Batteries included. We built a simple and straightforward CLI tool
-              that makes customization and deployment a breeze, but capable of
-              producing even the most complicated sites.
-            </p>
+          <div class="img-laptop-mobile">
+            <img
+              src="images/illustration-laptop-mobile.svg"
+              alt="laptop image mobile"
+            />
+          </div>
+          <div class="text">
+            <div class="part-1">
+              <h3>Free, open, simple</h3>
+              <p>
+                Blogr is a free and open source application backed by a large
+                community of helpful developers. It supports features such as
+                code syntax highlighting, RSS feeds, social media integration,
+                third-party commenting tools, and works seamlessly with Google
+                Analytics. The architecture is clean and is relatively easy to
+                learn.
+              </p>
+            </div>
+            <div class="part-2">
+              <h3>Powerful tooling</h3>
+              <p>
+                Batteries included. We built a simple and straightforward CLI
+                tool that makes customization and deployment a breeze, but
+                capable of producing even the most complicated sites.
+              </p>
+            </div>
           </div>
         </div>
       </article>
@@ -192,5 +204,6 @@
         <a href="https://eugencoda.github.io/" target="_blank">Eugen Coda</a>.
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
