--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             src="images/icon-hamburger.svg"
             alt="menu button"
           />
+          <img
+            class="close-btn"
+            src="images/icon-close.svg"
+            alt="close button"
+          />
         </div>
       </nav>
       <div class="introduction">
